--- a/MtcDataExtractor/tsconfig.json
+++ b/MtcDataExtractor/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "sourceMap": true
     }
 }
