--- a/MtcDataExtractor/package.json
+++ b/MtcDataExtractor/package.json
@@ -16,6 +16,7 @@
     "tsd": "^0.6.4"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "lodash": "^3.10.1",
     "q": "^1.4.1",
     "selenium-webdriver": "^2.47.0"
