--- a/MtcDataExtractor/package.json
+++ b/MtcDataExtractor/package.json
@@ -19,6 +19,7 @@
     "async": "^1.4.2",
     "lodash": "^3.10.1",
     "q": "^1.4.1",
-    "selenium-webdriver": "^2.47.0"
+    "selenium-webdriver": "^2.47.0",
+    "sqlite3": "^3.1.0"
   }
 }
