--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"nativescript": {
-		"id": "org.nativescript.MyRoute",
+		"id": "org.nativescript.myroute1",
 		"tns-android": {
-			"version": "1.3.0"
+			"version": "1.4.0"
 		}
 	},
 	"dependencies": {
-		"tns-core-modules": "1.3.0"
+		"tns-core-modules": "1.4.0"
 	}
 }
