--- a/app/package.json
+++ b/app/package.json
@@ -1,26 +1,11 @@
 {
-	"name": "tns-template-hello-world",
+	"name": "MyRoute",
 	"main": "app.js",
 	"jsoptions": "--expose_gc",
 	"version": "1.4.0",
-	"author": "Telerik <support@telerik.com>",
-	"description": "Nativescript hello-world project template",
+	"author": "MV <vmanikandan001@hotmail.com>",
+	"description": "My Route",
 	"license": "BSD",
 	"keywords": [
-		"telerik",
-		"mobile",
-		"nativescript",
-		"{N}",
-		"tns",
-		"appbuilder",
-		"template"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/NativeScript/template-hello-world.git"
-	},
-	"bugs": {
-		"url": "https://github.com/NativeScript/template-hello-world/issues"
-	},
-	"homepage": "https://github.com/NativeScript/template-hello-world"
+	]
 }
