--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-	"nativescript": {
-		"id": "org.nativescript.myroute1",
-		"tns-android": {
-			"version": "1.4.0"
-		}
-	},
-	"dependencies": {
-		"tns-core-modules": "1.4.0"
-	}
+  "nativescript": {
+    "id": "org.nativescript.MyRoute",
+    "tns-android": {
+      "version": "1.4.0"
+    }
+  },
+  "dependencies": {
+    "nativescript-sqlite": "^1.0.0",
+    "tns-core-modules": "1.4.0"
+  }
 }
